[package]
name = "tolak-me"
version = "0.1.0"
authors = ["Wenfeng Wang <kalot.wang@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build]
target = "wasm32-unknown-unknown"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]

[dependencies]
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
handlebars = "4.0.0"
yew = "0.19"
yew-router="0.16.0"
log = "0.4"
web_logger = "0.2"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.31"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
